# HTMX-playground

./: Cargo.toml  README.md
src/: main.rs
src/http_services/: mod.rs
