[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-files = "0.6.2"
anyhow = "1.0.71"
env_logger = "0.10.0"
leptos = { version = "0.4.1", features = ["ssr"] }
log = "0.4.19"
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
